--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -6,86 +6,86 @@ import DefaultThemeSelect from "@astrojs/starlight/components/ThemeSelect.astro"
 ---
 
 <div>
-  <DefaultSiteTitle />
-  <DefaultSearch class="search" />
-  <ul>
-    <li>
-      <a href="/varun">varun</a>
-      <a href="/make">make</a>
-      <a href="/barun">barun</a>
-    </li>
-  </ul>
-  <div class="threenavbar">
-    <DefaultSocialIcons />
-    <DefaultThemeSelect />
-  </div>
+	<DefaultSiteTitle />
+	<DefaultSearch class="search" />
+	<ul>
+		<li class="min-w-sm justify-center">
+			<a href="/varun">varun</a>
+			<a href="/make">make</a>
+			<a href="/https://start.me/p/gGGr4K/varun-sharma/">Start Me</a>
+		</li>
+	</ul>
+	<div class="threenavbar">
+		<DefaultSocialIcons />
+		<DefaultThemeSelect />
+	</div>
 </div>
 
 <style>
-  div {
-    display: flex;
-    align-items: center;
-    gap: var(--sl-nav-gap);
-    justify-content: space-between;
-  }
-  ul {
-    display: flex;
-    list-style: none;
-    /* padding-left: 10px;
+	div {
+		display: flex;
+		align-items: center;
+		gap: var(--sl-nav-gap);
+		justify-content: space-between;
+	}
+	ul {
+		display: flex;
+		list-style: none;
+		/* padding-left: 10px;
     padding-right: 10px; */
-    gap: var(--sl-nav-gap);
-  }
-  li {
-    display: flex;
-    gap: var(--sl-nav-gap);
-    /* padding-left: 10px;
+		gap: var(--sl-nav-gap);
+	}
+	li {
+		display: flex;
+		gap: var(--sl-nav-gap);
+		/* padding-left: 10px;
     padding-right: 10px; */
-  }
-  a {
-    padding-left: 2%;
-    padding-right: 2%;
-    text-decoration: none;
-    font-weight: 600;
-    color: var(--sl-color-text-accent);
-  }
+	}
+	a {
+		padding-left: 2%;
+		padding-right: 2%;
+		text-decoration: none;
+		font-weight: 600;
+		color: var(--sl-color-text-accent);
+	}
 
-  a:hover,
-  a:focus {
-    color: var(--sl-color-white);
-  }
+	a:hover,
+	a:focus {
+		color: var(--sl-color-white);
+	}
 
-  [aria-current="page"],
-  [aria-current="page"]:hover,
-  [aria-current="page"]:focus {
-    font-weight: 600;
-  }
+	[aria-current="page"],
+	[aria-current="page"]:hover,
+	[aria-current="page"]:focus {
+		font-weight: 600;
+	}
 
-  @media (max-width: 50rem) {
-    a {
-      display: none;
-      font-size: var(--sl-text-sm);
-    }
+	@media (max-width: 50rem) {
+		a {
+			display: none;
+			font-size: var(--sl-text-sm);
+		}
 
-    .threenavbar {
-      display: none;
-    }
+		.threenavbar {
+			display: none;
+		}
 
-    .search {
-      margin-left: 100px;
-      margin-right: auto;
-      width: 90%;
-      max-width: 300px;
-      padding: 0.5rem 1rem;
-      border-radius: 9999px;
-      background: rgba(255, 255, 255, 0.1);
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-      backdrop-filter: blur(8px);
-      transition: all 0.3s ease;
-    }
+		.search {
+			margin-left: 100px;
+			margin-right: auto;
+			width: 90%;
+			max-width: 300px;
+			padding: 0.5rem 1rem;
+			border-radius: 9999px;
+			background: rgba(255, 255, 255, 0.1);
+			box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+			backdrop-filter: blur(8px);
+			transition: all 0.3s ease;
+		}
 
-    .search:focus-within {
-      background: rgba(255, 255, 255, 0.2);
-      box-shadow: 0 4px 14px rgba(0, 0, 0, 0.25);
-    }
-  }
+		.search:focus-within {
+			background: rgba(255, 255, 255, 0.2);
+			box-shadow: 0 4px 14px rgba(0, 0, 0, 0.25);
+		}
+	}
 </style>
