feat: added github action

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -12,7 +12,7 @@ import DefaultThemeSelect from "@astrojs/starlight/components/ThemeSelect.astro"
 		<li class="min-w-sm justify-center">
 			<a href="/varun">varun</a>
 			<a href="/make">make</a>
-			<a href="/https://start.me/p/gGGr4K/varun-sharma/">Start Me</a>
+			<a target="_blank" rel="noopener noreferrer" href="https://start.me/p/gGGr4K/varun-sharma/">Start Me</a>
 		</li>
 	</ul>
 	<div class="threenavbar">
